iss: Refactor Register(File) in passes to RegisterTensor (#183)
Replaces all usages of Register(File) and its read/write nodes by RegisterTensor.